align-self : center to fix the stretched height(by default) on an image

--- a/src/components/comingUpEvents.sass
+++ b/src/components/comingUpEvents.sass
@@ -111,6 +111,7 @@
     img
       width: 200px
       height: inherit
+      align-self: center
 
     .detail-btn-event
       display: flex
